# ObsidianOS

./: Dependencies.txt  Makefile  README.md  bochs-x86.sh  bochs_config_x86  bx_enh_dbg.ini  qemu-x86-16bit.gdb  qemu-x86.gdb  qemu-x86.sh
build_scripts/x86/: image.sh
src/: x86_partition_table.txt
src/bootloader/x86/: Makefile  bootloader.asm
src/bootloader/x86/shared/: disk_utils.asm  puts.asm
src/bootloader/x86/stage1/: Makefile  bootloader.asm  disk_utils.asm  puts.asm  stage2_info.asm
src/bootloader/x86/stage2/: Makefile  gdt.asm  screen.asm  stage2.asm  stdio.asm
src/bootloader/x86/stage3/: Cargo.toml  Makefile  build.rs  linker.ld  main.asm  rust-toolchain.toml  x86-unknown-bare_metal.json
src/bootloader/x86/stage3/asm/: interrupts.asm  isr.asm
src/bootloader/x86/stage3/src/: asm.rs  debug.rs  interrupts.rs  isr.rs  kernel.rs  lib.rs  main.rs  video.rs
src/bootloader/x86/stage3/src/datastructures/: mod.rs  queue.rs  vector.rs
src/bootloader/x86/stage3/src/driver/keyboard/: mod.rs  ps2.rs
src/bootloader/x86/stage3/src/fs/: mod.rs
src/bootloader/x86/stage3/src/interrupts/: i8259.rs  irq.rs  mod.rs  pic.rs
src/bootloader/x86/stage3/src/memory/: mod.rs
src/bootloader/x86/stage3/src/memory/allocators/: arena.rs  array.rs  hardcoded.rs  mod.rs
src/kernel/x86/: Makefile  main.asm
src/kernel/x86/entry/: Makefile  main.asm
