[package]
name = "stage3"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]

[features]
default = []

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

[package.metadata.cargo-xbuild.default-target]
i686-unknown-none = true

[build]
target = "linker.ld"
rustflags = ["-C", "link-arg=-Tlinker.ld", "-C", "link-arg=--oformat=binary"]

[package.metadata]
rustflags = ["-C", "link-args=-Tlinker.ld"]